--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ h2 {
 
 a:hover {
     background-color: white;
+    font-weight: 700;
 }
 
 .checkbox-container {
@@ -194,12 +195,12 @@ a:hover {
 .card {
     width: 350px;
     height: 300px;
-    border-radius: 100%;
+    border-radius: 50%;
     margin: 3rem 0 0 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #60E1E0;
+    background-color: #00f5d4;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -238,7 +239,7 @@ a:hover {
     width: 100px;
     border-radius: 50%;
     display: block;
-    border: 1px solid white;
+    border: 2px solid rgb(39, 09, 99);
     opacity: 0;
     transition: 0.5s ease-in-out;
 }
