--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ a:hover {
     width: 100px;
     border-radius: 50%;
     display: block;
-    border: 2px solid rgb(39, 09, 99);
+    border: 2px solid white;
     opacity: 0;
     transition: 0.5s ease-in-out;
 }
