--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ a:hover {
     letter-spacing: 1px;
     font-weight: 500;
     color: rgb(110, 110, 110);
+    justify-content: space-evenly;
     text-align: center;
     padding-top: 30px;
     padding-left: 10px;
