--- a/style.css
+++ b/style.css
@@ -281,7 +281,7 @@ a:hover {
 
 
 .footer {
-    width: 100%;
+    width: 100vw;
     height: 100px;
     background-color: #60E1E0;
     display: flex;
