--- a/style.css
+++ b/style.css
@@ -291,6 +291,30 @@ a:hover {
 }
 
 @media screen and (max-width: 970px) {
+    
+    .header-container {
+        justify-content: end;
+        background-origin: padding-box;
+        padding: 30px;
+        background-size: 90%;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 16px;
+    }
+
+    .social-media {
+        max-width: 3rem;
+    }
+    
+    h1, h2, .social-media { 
+        padding-left: 30px;
+        margin-bottom: 10px;
+    }
 
     .card-container{
         margin: 0 auto;
