--- a/style.css
+++ b/style.css
@@ -315,6 +315,12 @@ a:hover {
         padding-left: 30px;
         margin-bottom: 10px;
     }
+  
+     
+    .card {
+        height: 200px;
+        width: 150px;
+    }
 
     .card-container{
         margin: 0 auto;
@@ -325,6 +331,7 @@ a:hover {
         justify-content: center;
         align-items: center;
     }
+    
 
     .card-wrapper {
         margin: auto;
