--- a/style.css
+++ b/style.css
@@ -329,7 +329,12 @@ a:hover {
     .card-wrapper {
         margin: auto;
     }
-
+    
+    .card:hover > .card-wrapper::before {
+        height: 100px;
+        width: 100px;
+        opacity: 1;
+    }
     .card-text h2 {
         font-size: 12px;
     }
